Blogs Page Commit

--- a/index.html
+++ b/index.html
@@ -31,6 +31,247 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="container">
+            <div class="box-button">
+                <button class="button-style">Upcoming Match</button>
+                <button class="button-style">All Group</button>
+                <button class="button-style">Blog</button>
+            </div>
+            <article class="blogs">
+                <div class="blog">
+                    <div class="thumbnail">
+                        <img src="./images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <div class="blog-button">
+                            <button>Transfer</button>
+                        </div>
+                        <div class="blog-title">
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        </div>
+                        <div class="blog-bottom">
+                            <div class="time">
+                                <i class="fa fa-clock"></i>
+                                <span class="distance">10hr</span>
+                            </div>
+                            <div class="message">
+                                <i class="fa fa-message"></i>
+                                <span class="distance">23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="thumbnail">
+                        <img src="./images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <div class="blog-button">
+                            <button>Transfer</button>
+                        </div>
+                        <div class="blog-title">
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        </div>
+                        <div class="blog-bottom">
+                            <div class="time">
+                                <i class="fa fa-clock"></i>
+                                <span class="distance">10hr</span>
+                            </div>
+                            <div class="message">
+                                <i class="fa fa-message"></i>
+                                <span class="distance">23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="thumbnail">
+                        <img src="./images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <div class="blog-button">
+                            <button>Transfer</button>
+                        </div>
+                        <div class="blog-title">
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        </div>
+                        <div class="blog-bottom">
+                            <div class="time">
+                                <i class="fa fa-clock"></i>
+                                <span class="distance">10hr</span>
+                            </div>
+                            <div class="message">
+                                <i class="fa fa-message"></i>
+                                <span class="distance">23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="thumbnail">
+                        <img src="./images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <div class="blog-button">
+                            <button>Transfer</button>
+                        </div>
+                        <div class="blog-title">
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        </div>
+                        <div class="blog-bottom">
+                            <div class="time">
+                                <i class="fa fa-clock"></i>
+                                <span class="distance">10hr</span>
+                            </div>
+                            <div class="message">
+                                <i class="fa fa-message"></i>
+                                <span class="distance">23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="thumbnail">
+                        <img src="./images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <div class="blog-button">
+                            <button>Transfer</button>
+                        </div>
+                        <div class="blog-title">
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        </div>
+                        <div class="blog-bottom">
+                            <div class="time">
+                                <i class="fa fa-clock"></i>
+                                <span class="distance">10hr</span>
+                            </div>
+                            <div class="message">
+                                <i class="fa fa-message"></i>
+                                <span class="distance">23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="thumbnail">
+                        <img src="./images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <div class="blog-button">
+                            <button>Transfer</button>
+                        </div>
+                        <div class="blog-title">
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        </div>
+                        <div class="blog-bottom">
+                            <div class="time">
+                                <i class="fa fa-clock"></i>
+                                <span class="distance">10hr</span>
+                            </div>
+                            <div class="message">
+                                <i class="fa fa-message"></i>
+                                <span class="distance">23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="thumbnail">
+                        <img src="./images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <div class="blog-button">
+                            <button>Transfer</button>
+                        </div>
+                        <div class="blog-title">
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        </div>
+                        <div class="blog-bottom">
+                            <div class="time">
+                                <i class="fa fa-clock"></i>
+                                <span class="distance">10hr</span>
+                            </div>
+                            <div class="message">
+                                <i class="fa fa-message"></i>
+                                <span class="distance">23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="thumbnail">
+                        <img src="./images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <div class="blog-button">
+                            <button>Transfer</button>
+                        </div>
+                        <div class="blog-title">
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        </div>
+                        <div class="blog-bottom">
+                            <div class="time">
+                                <i class="fa fa-clock"></i>
+                                <span class="distance">10hr</span>
+                            </div>
+                            <div class="message">
+                                <i class="fa fa-message"></i>
+                                <span class="distance">23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="thumbnail">
+                        <img src="./images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <div class="blog-button">
+                            <button>Transfer</button>
+                        </div>
+                        <div class="blog-title">
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        </div>
+                        <div class="blog-bottom">
+                            <div class="time">
+                                <i class="fa fa-clock"></i>
+                                <span class="distance">10hr</span>
+                            </div>
+                            <div class="message">
+                                <i class="fa fa-message"></i>
+                                <span class="distance">23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <p class="main-end-button"><button class="view-button">View All</button></p>
+    </main>
+    <footer class="footer-container">
+        <h3 class="footer-heading">Goal</h3>
+        <hr>
+        <div class="footer-label">
+            <ul>
+                <li>Contact Us </li>
+                <li>Terms of Service</li>
+                <li>Privacy Policy</li>
+                <li>Privacy Settings</li>
+                <li>Goal App</li>
+                <li>Goal Live</li>
+            </ul>
+        </div>
+        <div class="social-media">
+            <a href="https://www.facebook.com/fazla.rabby.3701/"><i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://www.youtube.com/watch?v=A66TYFdz8YA"><i class="fa-brands fa-youtube"></i></a>
+            <a href=""><i class="fa-brands fa-skype"></i></a>
+        </div>
+    </footer>
 </body>
 
 </html>
