Upcoming Match commit

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <main>
         <section class="container">
             <div class="box-button">
-                <button class="button-style">Upcoming Match</button>
-                <button class="button-style">All Group</button>
-                <button class="button-style">Blog</button>
+                <button class="button-style up-match"><a href="./upcoming-match.html">Upcoming Match</a></button>
+                <button class="button-style"><a href="">All Group</a></button>
+                <button class="button-style blog-btn"><a href="./index.html">Blog</a></button>
             </div>
             <article class="blogs">
                 <div class="blog">
