--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
     <!-- Header Start -->
     <header class="top-banner">
         <div class="header-text">
-            <h2>The Greatest show on the earth</h2>
-            <p class="page-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos reprehenderit voluptas
-                provident ea,
-                quibusdam architecto nesciunt velit tempore nostrum officiis.</p>
+            <h2 id="show">The Greatest show on the earth</h2>
+            <p class="page-info">In our website, you will get all the updated information related to football. You can
+                enjoy live matches and even can take a peak of the upcoming matches.</p>
             <button class="live-button">Watch Live <i class="fa-regular fa-greater-than"></i></button>
         </div>
         <div class="header-image">
@@ -34,9 +33,9 @@
     <main>
         <section class="container">
             <div class="box-button">
-                <button class="button-style up-match"><a href="./upcoming-match.html">Upcoming Match</a></button>
+                <button class="button-style"><a href="./upcoming-match.html">Upcoming Match</a></button>
                 <button class="button-style"><a href="">All Group</a></button>
-                <button class="button-style blog-btn"><a href="./index.html">Blog</a></button>
+                <button class="button-style"><a href="./index.html">Blog</a></button>
             </div>
             <article class="blogs">
                 <div class="blog">
