--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -16,10 +16,9 @@
     <!-- Header Start -->
     <header class="top-banner">
         <div class="header-text">
-            <h2>The Greatest show on the earth</h2>
-            <p class="page-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos reprehenderit voluptas
-                provident ea,
-                quibusdam architecto nesciunt velit tempore nostrum officiis.</p>
+            <h2 id="show">The Greatest show on the earth</h2>
+            <p class="page-info">In our website, you will get all the updated information related to football. You can
+                enjoy live matches and even can take a peak of the upcoming matches.</p>
             <button class="live-button">Watch Live <i class="fa-regular fa-greater-than"></i></button>
         </div>
         <div class="header-image">
